# Hemera-OneirOS

./: changelog.md  fileandwiremap.md  pyproject.toml  runbook.md
configs/: oneiros.default.yaml
docs/: DOCUMENTATION.md
docs/architecture/: overview.md
docs/zielbild/: spec.md
oneiros/: README.md  __init__.py  configuration.py
oneiros/core/: README.md  analyzer.py  planner.py  scheduler.py  trace.py
oneiros/frontends/: README.md
oneiros/frontends/evm/: README.md
oneiros/frontends/svm/: README.md
oneiros/frontends/wasm/: README.md
oneiros/ops/: README.md  __init__.py  cli.py
oneiros/proving/: README.md
oneiros/proving/engine/: README.md
oneiros/proving/injector/: README.md
oneiros/sdk/: README.md
oneiros/sdk/rust/: README.md
oneiros/sdk/typescript/: README.md
tests/: README.md  conftest.py  test_analyzer.py  test_cli.py  test_configuration.py  test_planner.py  test_scheduler.py  test_trace.py
